// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SplitStructure <items> component set of tests > Should [match snapshot] on render (both) 1`] = `
<div
  class="_first_item_d78199"
  data-testid="split-structure-first-item"
/>
`;

exports[`SplitStructure <items> component set of tests > Should [match snapshot] on render (both) 2`] = `
<div
  class="_second_item_d78199"
  data-testid="split-structure-second-item"
/>
`;

exports[`SplitStructure <parent> component set of tests > Should [match snapshot] on render 1`] = `
<div
  class="_split_structure_d78199"
  data-testid="split-structure"
>
  <div
    class="_first_item_d78199"
    data-testid="split-structure-first-item"
  />
  <div
    class="_second_item_d78199"
    data-testid="split-structure-second-item"
  />
</div>
`;
